# fintech-agent

./: .gitignore  Agent.md  README.md  langgraph.json  pyproject.toml  spec.md
config/: config.toml  demo.toml  example.toml
docs/: project-overview.md  run-guide.md
examples/: sample_news.json  sample_price_observations.csv
scripts/: clawhub.ps1  install_clawhub_agent_skills.py  test_codex_connection.py
skills/: README.md  clawhub_selection.toml
skills/agents/audit/: skill.md
skills/agents/event_intelligence/: skill.md
skills/agents/ingestion/: skill.md
skills/agents/market_reasoning/: skill.md
skills/agents/report/: skill.md
src/fitech_agent/: __init__.py  cli.py  config.py  dashboard.py  langgraph_app.py  llm.py  models.py  orchestration.py  pipeline.py  reporting.py  source_catalog.py  storage.py  webapp.py
src/fitech_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/fitech_agent/adapters/: base.py  file.py  mock.py  rss.py
src/fitech_agent/agents/: __init__.py  audit.py  base.py  collector.py  credibility.py  domain.py  extract.py  mapping.py  normalize.py  registry.py  report.py  skill_loader.py  (+1 more)
src/news_employee/: __init__.py  cli.py  config.py  evaluation.py  langgraph_app.py  llm.py  orchestration.py  pipeline.py  reporting.py  storage.py  utils.py
src/news_employee.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_audit.py  test_cli.py  test_dashboard.py  test_llm.py  test_normalization.py  test_pipeline.py  test_rss_filters.py  test_source_confidence.py
(+79 files in other folders)
