[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fitech-agent"
version = "0.1.0"
description = "Multi-agent global macro news pipeline for market impact analysis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.0",
  "litellm>=1.63.0",
  "langsmith>=0.3.15",
  "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
fitech-agent = "fitech_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"fitech_agent.web" = ["*.html", "*.css", "*.js"]
"fitech_agent" = ["agents/*/skill.md", "agents/*/*/*.md"]

